app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: petclinic
  name: petclinic
spec:
  host: petclinic.apps.azure.shaozhending.net
  tls:
    termination: edge
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: petclinic
    weight: 100
